# take_it_easy

./: .dockerignore  .frontend_pid  .gitignore  .mailmap  .rust_pid  2025-10-26-rsum-des-quick-wins-appliqus.txt  2025-11-02-2025-10-26-rsum-des-quick-wins-appliqustxt-repr.txt  2025-11-07-2025-11-02-2025-10-26-rsum-des-quick-wins-appliqu.txt  2025-11-10-2025-11-02-2025-10-26-rsum-des-quick-wins-appliqu.txt  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V2_PLAN.md  AUDIT_REPORT.md  CLEANUP_SCRIPT.sh  Cargo.toml  DATA_AUGMENTATION_PLAN.md  DEPLOYMENT.md  Dockerfile.build  Dockerfile.build.cuda  Dockerfile.gpu  FLOW_INDEPENDANT.md  GOLD_GNN_IMPLEMENTATION_PLAN.md  GUMBEL_FAILURE_ANALYSIS.md  HISTORIQUE_EXPLORATIONS_COMPLET.md  HYPERPARAMETER_IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  INVESTIGATION_CNN_MCTS_2026-01-18.md  MODES_JEU.md  Makefile  NEXT_CLAUDE_INSTRUCTIONS.md  NEXT_SESSION_START_HERE.md  OPTIMIZATION_ROADMAP.md  OPTION_B_SUMMARY.md  PHASE1_RESULTS_SUMMARY.md  QUICK_WINS_RESULTS.md  README.md  README_START.md  REPRISE_ENTRAINEMENT_2026-01-12.md  RESUME_RAPIDE.md  ROADMAP_130PTS.md  (+75 more)
.cargo/: config.toml
.claude/: config.yaml
.copilot/: config.json
.github/: dependabot.yml
.local_target/: .rustc_info.json
coverage/: tarpaulin-report.html
data/: phase1_expert.json  phase2_expert.json  phase3_expert.json
docs/: ALPHAGO_TRAINING_RESULTS_2025-12-27.md  ALPHAGO_ZERO_TRAINING_2025-12-27.md  ANALYSIS_VALUE_LOSS_DIVERGENCE_2026-01-02.md  ARCHITECTURE_PLAN_145_PTS_2026-01-24.md  BILAN_ALPHAZERO_50ITER_2026-01-02.md  BRONZE_GNN_RESULTS.md  BUG_RESOLUTION_GROUPNORM_INIT_2026-01-02.md  COW_PERFORMANCE_ANALYSIS_2025-12-26.md  CRITICAL_POLICY_STAGNATION_2026-01-02.md  DIAGNOSTIC_BASELINE_2025-12-26.md  EXPECTIMAX_4_LEVELS_OF_FAILURE.md  EXPECTIMAX_FAILURE_ANALYSIS.md  EXPERT_DATA_GENERATION_2025-12-26.md  EXPERT_DATA_TRAINING_RESULTS_2025-12-27.md  FINAL_CONCLUSION_2025-12-27.md  FINAL_RECOMMENDATIONS_2025-12-27.md  IMPLEMENTATION_DIRICHLET_NOISE.md  INVESTIGATION_FINALE_2026-01-03.md  MCTS_IMPROVEMENT_PLAN.md  MCTS_ROLLBACK_STRATEGY.md  MCTS_TRANSFORMER_RESEARCH.md  PLAN_RESTAURATION_ALPHAZERO_2026-01-01.md  POURQUOI_NETWORK_NE_SUIT_PAS_ROLLOUTS_2026-01-02.md  QNET_HYBRID_MCTS_2026-01-24.md  RANDOM_VS_MCTS_COMPARISON_2025-12-26.md  RAPPORT_FINAL_GROUPNORM_FIX_2026-01-02.md  README.md  README_EXPECTIMAX_ANALYSIS.md  REGRESSION_INVESTIGATION_2025-12-27.md  RESEARCH_HISTORY.md  RESEARCH_SUMMARY.md  ROADMAP_PERFORMANCE_2025-12-29.md  ROOT_CAUSE_FOUND_2025-12-27.md  SPINOFF_TRIBAND.md  SPRINT2_ZERO_COPY_REFACTOR.md  STOCHASTIC_MCTS_TAXONOMY.md  TRAINING_RESULTS_2025-12-26.md  TRAINING_SESSION_2025-12-26.md  TRANSFORMER_TDD_PLAN.md  ai_improvement_plan.md  (+12 more)
filtered_datasets/: supervised_130plus.csv  supervised_140plus.csv  supervised_150plus.csv
frontend/: complete_codebase.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.cjs  vite.config.js  vite.config.ts
frontend-elm/: build.sh  dev.sh  elm.json  package-lock.json  package.json
local_target/: .rustc_info.json
protos/: common.proto  game_service.proto  session_service.proto
scripts/: analyze_expert_data.py  analyze_hyperparameters.py  analyze_results.py  docker_entrypoint.sh  improve_production.sh  safe_deploy.sh  self_improve.sh  vastai_setup.sh
src/: build.rs  choisir_et_placer.rs  create_plateau_empty.rs  create_shuffle_deck.rs  doc.adoc  index.html  index2.html  lib.rs  logging.rs  main.rs  mcts_vs_human.rs  mod.rs  place_tile.rs  plateau.rs  policy_value_net.rs  remove_tile_from_deck.rs  result.rs  test.rs
target2/: .rustc_info.json
test_model/: layer0_ff1_bs.ot  layer0_ff1_ws.ot  layer0_ff2_bs.ot  layer0_ff2_ws.ot  layer1_ff1_bs.ot  layer1_ff1_ws.ot  layer1_ff2_bs.ot  layer1_ff2_ws.ot  policy_head_bs.ot  policy_head_ws.ot  value_head_bs.ot  value_head_ws.ot
tests/: lib_integration_test.rs  model_weights_sanity.rs  test_improved_features.rs  transformer_evaluation_tests.rs  transformer_learning_test.rs  transformer_validation_quick_test.rs  transformer_validation_test.rs  ui_reactivity_integration_test.rs  ui_reactivity_regression_test.rs
transformer_weights/: boost_head_bs.ot  boost_head_ws.ot  layer0_ff1_bs.ot  layer0_ff1_ws.ot  (+18 more)
(+1705 files in other folders)
