[package]
name = "take_it_easy"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Take It Easy board game implementation with AI capabilities, MCTS engine, and multiplayer support"

[dependencies]
rand = "0.9.0-beta.1"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "time", "fs"] }
serde_json = "1.0.133"
serde = { version = "1.0.188", features = ["derive"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
clap = { version = "4.5.51", features = ["derive"] }
tch = "0.19.0"
log = "0.4.22"
rayon = "1.10.0"
chrono = "0.4"
flexi_logger = "0.29.0"
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tonic-web = "0.10"
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["fs", "cors"] }
http = "0.2.12"
tower = "0.5.2"
futures = "0.3.31"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"

# Profils optimisés
[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0

