[package]
name = "take_it_easy"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Take It Easy board game implementation with AI capabilities, MCTS engine, and multiplayer support"

[dependencies]
rand = "0.10.0-rc.5"
rand_distr = "0.6.0-rc.0"  # For Dirichlet noise in AlphaGo Zero self-play (compatible with rand 0.10.0-rc.5)
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "time", "fs"] }
serde_json = "1.0.148"
serde = { version = "1.0.188", features = ["derive"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
clap = { version = "4.5.51", features = ["derive"] }
tch = "0.18.0"
log = "0.4.28"
rayon = "1.10.0"
chrono = "0.4"
flexi_logger = "0.31.7"
tonic = "0.14"
prost = "0.14"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tonic-web = "0.14"
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
http = "1.4"
tower = "0.5.2"
futures = "0.3.31"
thiserror = "2.0"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"

# Profils optimisés
[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
